  device as the first positional argument. This was inconsistant, and is
  necessary to support other kinds of recording in the future.
- Rename umockdev-run's -l/--load option to -d/--device. Other kinds of files
  (ioctl dumps, and soon read/write scripts) also get "loaded" into the
  testbed, so the previous name does not make sense any more.

0.2.11 (2013-07-03)
-------------------
- Do not overwrite an existing $LD_PRELOAD in umockdev-run and umockdev-record.
- Add "make check-valgrind" target to debug memory leaks.
- Add recently added API to reference documentation.
- Fix various memory leaks.

0.2.10 (2013-07-01)
-------------------
- Make stat()ing of emulated /dev/ nodes appear as actual block/char device
  nodes with proper major/minor number, instead of regular files. (issue #16)
- Add umockdev_testbed_add_from_file() convenience wrapper around
  add_from_string(). (issue #15)
- Handle USBDEVFS_REAPURB ioctls without a previous SUBMITURB like the real USB
  stack (return EAGAIN instead of crashing with an assertion). This makes
  umockdev work with gvfs' mtp backend.

0.2.9 (2013-06-20)
------------------
- preload: Do not change errno when calculating wrapped paths.
- Add umockdev_testbed_disable() and umockdev_testbed_enable() methods for
  temporarily disabling the emulated /sys and /dev. This can be used for
  temporarily switching back to the real /sys and /dev without having to
  destroy or change $UMOCKDEV_DIR and the UMockdevTestbed instance (which is
  difficult when these get exported to subprocesses like local D-BUS
  instances).

0.2.8 (2013-06-17)
------------------
- Link the typelib to the SONAMEd library, not the version-less development
  symlink.

0.2.7 (2013-06-17)
------------------
- Slightly relax errno test in /umockdev-testbed-vala/usbfs_ioctl_static, the
  real call might fail not just with ENOTTY but also with EINVAL.
- Fix tests to work on big-endian machines (tested on powerpc32).

0.2.6 (2013-06-13)
------------------